fixed nav framework not showing up

--- a/assets/style.css
+++ b/assets/style.css
@@ -105,7 +105,7 @@ html {
  
 /*adding upcoming trailer with countdown timer*/
 
-.poster {
+/* .poster {
     margin: 30px;
     border: 3px solid rgba(255, 0, 43, 0.007);
     width: 150px;
@@ -133,6 +133,6 @@ li {
     opacity: 0;
 }
 
-li:hover{
+/* li:hover{
     opacity: 1;
-}
+} */ */
